Landing page is in its early state

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,7 @@
 <%- include('partials/header') %>
-    <h1>This is the UVCE Mizo homepage 💘</h1>
+
+    <main>
+        <h1>This is the UVCE Mizo homepage 💘</h1>
+    </main>
+
 <%- include('partials/footer') %>
