--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,8 @@
-<footer>
-        <p>&copy; Click me to show contacts</p>
+    <footer>
+        <!--later, replace # with the path to contacts -->
+        <a href="#">☎️contacts</a>
+        <a href="#">🤫extras</a>
+        <a href="#">👾[don't press me]</a>
     </footer>
 </body>
 </html>
