--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,22 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="/home">Home</a>
-            <a href="/about">About</a>
-        </nav>
+            <div class="logo">
+                <!-- replace the # with the image file name -->
+                <img src="/public/images/#" alt="📷">
+            </div>
+            <div class="links">
+                <a href="/home">Home</a>
+                <a href="/about">About</a>
+                <!-- since branch is a dropdown, we can just use the dropdown class -->
+                <div class="dropdown">
+                    <button class="dropdown-button">Branch</button>
+                    <div class="dropdown-content">
+                        <a href="#">Civil</a>
+                        <a href="#">Mech</a>
+                        <a href="#">CSE</a>
+                    </div>
+                </div>
+
+            </div>
     </header>
