--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/public/css/global.css">
+    <link rel="stylesheet" href="/public/css/main.css">
 </head>
 <body>
     <header>
@@ -15,9 +16,10 @@
             <div class="links">
                 <a href="/home">Home</a>
                 <a href="/about">About</a>
+                <a href="/alumni">Alumni</a>
                 <!-- since branch is a dropdown, we can just use the dropdown class -->
                 <div class="dropdown">
-                    <button class="dropdown-button">Branch</button>
+                    <button class="dropdown-button">Branches</button>
                     <div class="dropdown-content">
                         <a href="#">Civil</a>
                         <a href="#">Mech</a>
