--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
-    <link rel="stylesheet" href="/public/css/global.css">
-    <link rel="stylesheet" href="/public/css/main.css">
+    <link rel="stylesheet" href="/css/global.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
     <header>
@@ -21,9 +21,9 @@
                 <div class="dropdown">
                     <button class="dropdown-button">Branches</button>
                     <div class="dropdown-content">
-                        <a href="#">Civil</a>
-                        <a href="#">Mech</a>
-                        <a href="#">CSE</a>
+                        <a href="/civil">Civil</a>
+                        <a href="/mech">Mech</a>
+                        <a href="/cse">CSE</a>
                     </div>
                 </div>
 
