--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,5 +1,5 @@
 body {
-    background-color:rgb(0, 80, 27);
+    background-color:antiquewhite;
     display: flex;
     flex-direction: column;
 }
