--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
     <footer>
         <!--later, replace # with the path to contacts -->
-        <a href="#">☎️contacts</a>
-        <a href="#">🤫extras</a>
-        <a href="#">👾[don't press me]</a>
+        <a href="/contacts">☎️contacts</a>
+        <a href="/extras">🤫extras</a>
+        <a href="/danger">👾[don't press me]</a>
     </footer>
 </body>
 </html>
