--- a/views/mech.ejs
+++ b/views/mech.ejs
@@ -1,5 +1,10 @@
 <%- include('partials/header') %>
+<link rel="stylesheet" href="/css/mech.css">
     <main>
+
+
         <h1>MECH</h1>
+
+
     </main>
 <%- include('partials/footer') %>
