--- a/views/alumni.ejs
+++ b/views/alumni.ejs
@@ -1,5 +1,10 @@
 <%- include('partials/header') %>
+<link rel="stylesheet" href="/css/alumni.css">
     <main>
+
+
         <h1>ALUMNI</h1>
+
+        
     </main>
 <%- include('partials/footer') %>
