--- a/views/cse.ejs
+++ b/views/cse.ejs
@@ -1,5 +1,10 @@
 <%- include('partials/header') %>
+<link rel="stylesheet" href="/css/cse.css">
     <main>
+
+
         <h1>CSE</h1>
+
+        
     </main>
 <%- include('partials/footer') %>
