--- a/public/css/global.css
+++ b/public/css/global.css
@@ -20,6 +20,7 @@ header {
     padding: 30px;
     justify-content: space-between;
     flex-shrink: 0;
+    flex-wrap: wrap;
 }
 
 .logo {
@@ -76,6 +77,7 @@ footer {
     display: flex;
     justify-content: space-evenly;
     text-align: center;
+    flex-wrap: wrap;
 }
 
 
