--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 main {
     flex: 1; /*This will make sure that main takes up majority of the space available*/
-    display: flex;
+    /* display: flex; */
     min-height: 100dvh;
 }
