Basic layout of images with description

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,8 +3,30 @@
     <main>
 
         
-        <h1>This is the UVCE Mizo homepage 💘</h1>
+        <div class="wrapper-1">
 
+            <div class="main-title">UVCE MIZO HOMEPAGE I LO THLENG TA</div>
+            
+            <div class="wrapper-2">
+                <img class="photos" src="/images/home.jpg" alt="">
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae accusamus omnis, ut eveniet eligendi error unde alias sit animi laboriosam tenetur dolores odit, magnam debitis! Natus earum voluptatum consectetur tenetur.</p>
+                </div>
+            </div>
+
+            <div class="wrapper-2">
+                <img class="photos" src="/images/batch-2028-freshers.jpg" alt="">
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus aspernatur nam sed quis molestias repellat! Dolorum officiis sed, vero est id ducimus, porro laborum accusamus aperiam amet ad voluptas.</p>
+                </div>
+            </div>
+
+            <div class="wrapper-2">
+                <img class="photos" src="/images/utc-moment.jpg" alt="">
+                <div class="content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus aspernatur nam sed quis molestias repellat! Dolorum officiis sed, vero est id ducimus, porro laborum accusamus aperiam amet ad voluptas.</p>
+                </div>
+            </div>
 
     </main>
 
