--- a/public/css/global.css
+++ b/public/css/global.css
@@ -24,8 +24,8 @@ header {
 }
 
 .logo {
-    width: 30px;
-    height: 30px;
+    max-width: 70px;
+    max-height: 70px;
     border: 2px solid pink;
 }
 
