--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,10 +9,8 @@
 </head>
 <body>
     <header>
-            <div class="logo">
                 <!-- replace the # with the image file name -->
-                <img src="/public/images/#" alt="📷">
-            </div>
+                <img class="logo" src="/images/logo.jpg" alt="📷">
             <div class="links">
                 <a href="/home">Home</a>
                 <a href="/about">About</a>
