--- a/public/css/home.css
+++ b/public/css/home.css
@@ -47,21 +47,6 @@
         }
 }
 
-/* for larger phones */
-@media (min-width:480px) {
-
-}
-
-/* for portrait tablets */
-@media (min-width:600px) {
-
-}
-
-/* for landscape tablets and lower-resolution laptops.  */
-@media (min-width:801px) {
-
-}
-
 /* for larger tablets and desktops.  */
 @media (min-width:1025px) {
     .wrapper-2 {
@@ -88,6 +73,10 @@
             padding-left: 5px;
             padding-right: 5px;
             flex-wrap: wrap;
+        }
+
+        p {
+            font-size: large;
         }
 }
 
