--- a/public/css/global.css
+++ b/public/css/global.css
@@ -20,12 +20,14 @@ header {
     padding: 30px;
     justify-content: space-between;
     flex-shrink: 0;
+    flex-wrap: wrap;
 }
 
 .logo {
-    width: 30px;
-    height: 30px;
+    max-width: 70px;
+    max-height: 70px;
     border: 2px solid pink;
+    border-radius: 20px;
 }
 
 .links {
@@ -76,6 +78,12 @@ footer {
     display: flex;
     justify-content: space-evenly;
     text-align: center;
+    flex-wrap: wrap;
+}
+
+.insta-footer {
+  max-width: 15px;
+  max-height: 15px;
 }
 
 
