--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,7 @@
             
             <div class="wrapper-2">
                 <img class="photos" src="/images/home.jpg" alt="">
+                <P>praise night 2024</P>
                 <div class="content">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae accusamus omnis, ut eveniet eligendi error unde alias sit animi laboriosam tenetur dolores odit, magnam debitis! Natus earum voluptatum consectetur tenetur.</p>
                 </div>
