changed header, background, and added captions to photos

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,10 +11,10 @@
     <header>
                 <!-- replace the # with the image file name -->
                 <img class="logo" src="/images/logo.jpg" alt="📷">
-            <div class="links">
-                <a href="/home">Home</a>
-                <a href="/about">About</a>
-                <a href="/alumni">Alumni</a>
+            <div class="links"> 
+                <a href="/home" class="haal">Home</a>
+                <a href="/about" class="haal">About</a>
+                <a href="/alumni" class="haal">Alumni</a>
                 <!-- since branch is a dropdown, we can just use the dropdown class -->
                 <div class="dropdown">
                     <button class="dropdown-button">Branches</button>
