--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,5 +1,5 @@
 body {
-    background-color:antiquewhite;
+    background-color:rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
 }
@@ -17,23 +17,31 @@ a:hover {
 header {
     margin: 0;
     display:flex;
-    padding: 30px;
+    padding: 20px;
     justify-content: space-between;
     flex-shrink: 0;
     flex-wrap: wrap;
+    background: linear-gradient(to right, rgb(231, 219, 219), rgb(77, 0, 0));
+    border-radius: 5px;
 }
 
 .logo {
-    max-width: 70px;
-    max-height: 70px;
+    max-width: 60px;
+    max-height: 60px;
     border: 2px solid pink;
     border-radius: 20px;
+    margin-left: 27px;
 }
 
 .links {
     display: flex;
     justify-content: flex-end;
-    gap: 15px;
+    gap: 25px;
+    margin-top: 20px;
+    color: white;
+}
+.haal {
+  color: white;
 }
 
 .dropdown {
