--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,14 +6,18 @@
 }
 
     .main-title {
-        font-family: monospace, 'Courier New', Courier;
-        font-weight: bolder;
+        font-family:'Times New Roman', Times, serif;
+        font-weight: 800px;
         font-size: xx-large;
-        background-color: pink;
-        border-radius: 30px;
+        /*background-color: rgb(56, 9, 9);
+        border-radius: 10px;
         padding: 10px;
+        padding-left: 20px;
+        padding-right: 20px;*/
         margin-bottom: 50px;
+        margin-top: 50px;
         flex-shrink: 0;
+        color: rgb(58, 4, 4);
     }
 
 /* 👆anything above this remains same whatsoever 👆 */
@@ -39,14 +43,13 @@
             height: auto;
             flex-grow: 1;
         }
-    
-    }
 
         .content {
             margin: 5px;
             padding-left: 5px;
             padding-right: 5px;
             flex-wrap: wrap;
+            color: rgb(0, 0, 0);
         }
 }
 
@@ -82,7 +85,6 @@
             font-size: large;
         }
 }
-
 
 
 
