--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
             
             <div class="wrapper-2">
                 <img class="photos" src="/images/home.jpg" alt="">
-                <P id="caption1">Praise Night 2024</P>
+                <p class="caption">Praise Night 2024</p>
                 <div class="content">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae accusamus omnis, ut eveniet eligendi error unde alias sit animi laboriosam tenetur dolores odit, magnam debitis! Natus earum voluptatum consectetur tenetur.</p>
                 </div>
@@ -17,7 +17,7 @@
 
             <div class="wrapper-2">
                 <img class="photos" src="/images/batch-2028-freshers.jpg" alt="">
-                <p>Fresher's Party 2028 Batch</p>
+                <p class="caption">Fresher's Party 2028 Batch</p>
                 <div class="content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus aspernatur nam sed quis molestias repellat! Dolorum officiis sed, vero est id ducimus, porro laborum accusamus aperiam amet ad voluptas.</p>
                 </div>
@@ -25,7 +25,7 @@
 
             <div class="wrapper-2">
                 <img class="photos" src="/images/utc-moment.jpg" alt="">
-                <p>2026 Batch Charge Inhlanna</p>
+                <p class="caption">2026 Batch Charge Inhlanna</p>
                 <div class="content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus aspernatur nam sed quis molestias repellat! Dolorum officiis sed, vero est id ducimus, porro laborum accusamus aperiam amet ad voluptas.</p>
                 </div>
