--- a/public/css/home.css
+++ b/public/css/home.css
@@ -15,7 +15,7 @@
         padding-left: 20px;
         padding-right: 20px;*/
         margin-bottom: 50px;
-        margin-top: 50px;
+        margin-top: 60px;
         flex-shrink: 0;
         color: rgb(58, 4, 4);
     }
@@ -36,6 +36,7 @@
             margin: 5px;
             border: 2px solid black;
             border-radius: 30px;
+            border-left: 20px;
             padding: 5px;
             flex-wrap: wrap;
             max-width: 90%;
@@ -79,6 +80,9 @@
             padding-left: 5px;
             padding-right: 5px;
             flex-wrap: wrap;
+        }
+        .caption {
+            font-weight: 550;
         }
 
         p {
