--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,5 +1,5 @@
 body {
-    background-color:rgb(255, 255, 255);
+    background-color:rgb(227, 239, 239);
     display: flex;
     flex-direction: column;
 }
@@ -21,16 +21,18 @@ header {
     justify-content: space-between;
     flex-shrink: 0;
     flex-wrap: wrap;
-    background: linear-gradient(to right, rgb(231, 219, 219), rgb(77, 0, 0));
+    background: linear-gradient(to left, rgb(138, 130, 130), rgb(0, 0, 0));
     border-radius: 5px;
 }
 
 .logo {
-    max-width: 60px;
-    max-height: 60px;
-    border: 2px solid pink;
-    border-radius: 20px;
-    margin-left: 27px;
+    max-width: 90px;
+    max-height: 900px;
+    /* border: 2px solid pink; */
+    /* border-radius: 20px; */
+    margin-left: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 .links {
@@ -79,7 +81,12 @@ header {
   display: block;
 }
 
+.dropdown-button:focus .dropdown-content {
+  display: block;
+}
+
 footer {
+    background-color:#dbe8de;
     margin: 10;
     flex-shrink: 0;
     padding: 10px;
