--- a/public/css/home.css
+++ b/public/css/home.css
@@ -38,7 +38,7 @@
             border-radius: 30px;
             padding: 5px;
             flex-wrap: wrap;
-            max-width: 90%;
+            max-width: 70%;
             width: 95%;
             height: auto;
             flex-grow: 1;
@@ -54,7 +54,7 @@
 }
 
 /* for larger tablets and desktops.  */
-@media (min-width:1025px) {
+/* @media (min-width:1025px) {
     .wrapper-2 {
         display: flex;
         flex-direction: row;
@@ -84,7 +84,7 @@
         p {
             font-size: large;
         }
-}
+} */
 
 
 
