--- a/public/css/global.css
+++ b/public/css/global.css
@@ -15,6 +15,7 @@ a:hover {
 }
 
 header {
+    flex-grow: 1;
     margin: 0;
     display:flex;
     padding: 20px;
@@ -28,8 +29,6 @@ header {
 .logo {
     max-width: 90px;
     max-height: 900px;
-    /* border: 2px solid pink; */
-    /* border-radius: 20px; */
     margin-left: 10px;
     margin-top: 0px;
     margin-bottom: 0px;
