--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,33 @@
 <%- include('partials/header') %>
 <link rel="stylesheet" href="/css/home.css">
+<script src="/js/fadeout.js"></script>
+    <main class="home">
 
-    <main>
+        <div class="hero-section"></div>
+        <div class="content-below">
 
-        
+            <h1 class="title" style="text-justify: auto;">UVCE MIZO HOMEPAGE YEAHHH</h1>
+
+            <h4 class="sub-title">ZIRMÊKTE ZÂT</h4>
+
+            <div class="stats">
+
+                <div class="zat">
+                    <div class="des">ALL</div>
+                    <div class="num">36</div>
+                </div>
+                <div class="zat">
+                    <div class="des">GIRL</div>
+                    <div class="num">6</div>
+                </div>
+                <div class="zat">
+                    <div class="des">BOY</div>
+                    <div class="num">30</div>
+                </div>
+
+            </div>
+
+        </div>
 
     </main>
 
