--- a/public/css/global.css
+++ b/public/css/global.css
@@ -2,6 +2,10 @@ body {
     background-color:rgb(227, 239, 239);
     display: flex;
     flex-direction: column;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+    margin-block-end: 0;;
 }
 
 a {
