--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
 <body>
     <header>
                 <!-- replace the # with the image file name -->
-                <img class="logo" src="/images/logo.png" alt="📷">
+                <a href="/home"><img class="logo" src="/images/logo.png" alt="📷"></a>
             <div class="links"> 
                 <a href="/home" class="haal">Home</a>
                 <a href="/about" class="haal">About</a>
