--- a/public/css/home.css
+++ b/public/css/home.css
@@ -109,7 +109,7 @@
     }
 
     .hero-section {
-        background-image: url(/images/utc-moment.jpg);
+        background-image: url('/images/lan_kim.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
