--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,12 @@
     <footer>
-        <!--later, replace # with the path to contacts -->
-        <a href="/contacts">☎️contacts</a>
-        <a href="/extras">🤫extras</a>
-        <a href="https://www.instagram.com/uvce_mizo/" target="_blank"><img class="insta-footer" src="/images/instagram.png" alt="inst"></a>
+        <div class="footer-links">
+            <a href="/contacts">☎️contacts</a>
+            <a href="/extras">🤫extras</a>
+            <a href="https://www.instagram.com/uvce_mizo/" target="_blank"><img class="insta-footer" src="/images/instagram.png" alt="inst">Insta</a>
+        </div>
+        <div class="copyright">
+            <p>Copyright &copy; UVCE Mizo Website. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
