--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
                 <a href="/home" class="haal">Home</a>
                 <a href="/about" class="haal">About</a>
                 <a href="/alumni" class="haal">Alumni</a>
+                <a href="/register" class="haal">Register</a>
                 <!-- since branch is a dropdown, we can just use the dropdown class -->
                 <div class="dropdown">
                     <button class="dropdown-button">Branches</button>
