Removing the Home text as the logo is itself a home link

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,7 +12,7 @@
                 <!-- replace the # with the image file name -->
                 <a href="/home"><img class="logo" src="/images/logo.png" alt="📷"></a>
             <div class="links"> 
-                <a href="/home" class="haal">Home</a>
+                <!-- <a href="/home" class="haal">Home</a> -->
                 <a href="/about" class="haal">About</a>
                 <a href="/alumni" class="haal">Alumni</a>
                 <a href="/register" class="haal">Register</a>
