--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,36 +1,7 @@
-<%- include('partials/header') %>
-<link rel="stylesheet" href="/css/home.css">
-    <main>
-
-        
-        <div class="wrapper-1">
-
-            <div class="main-title">UVCE MIZO HOMEPAGE I LO THLENG TA</div>
-            
-            <div class="wrapper-2">
-                <img class="photos" src="/images/home.jpg" alt="">
-                <p class="caption">Praise Night 2024</p>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae accusamus omnis, ut eveniet eligendi error unde alias sit animi laboriosam tenetur dolores odit, magnam debitis! Natus earum voluptatum consectetur tenetur.</p>
-                </div>
-            </div>
-
-            <div class="wrapper-2">
-                <img class="photos" src="/images/batch-2028-freshers.jpg" alt="">
-                <p class="caption">Fresher's Party 2028 Batch</p>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus aspernatur nam sed quis molestias repellat! Dolorum officiis sed, vero est id ducimus, porro laborum accusamus aperiam amet ad voluptas.</p>
-                </div>
-            </div>
-
-            <div class="wrapper-2">
-                <img class="photos" src="/images/utc-moment.jpg" alt="">
-                <p class="caption">2026 Batch Charge Inhlanna</p>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti delectus aspernatur nam sed quis molestias repellat! Dolorum officiis sed, vero est id ducimus, porro laborum accusamus aperiam amet ad voluptas.</p>
-                </div>
-            </div>
-
-    </main>
-
+<%- include('partials/_topbar') %>
+  <div>
+    <img src="/image/uvce.jpg" alt="Anime Image" style="width:100%; height:710px;">
+  </div>
 <%- include('partials/footer') %>
+</body>
+</html>
