--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
     <footer>
         <!--later, replace # with the path to contacts -->
-        <a href="/contacts">☎️contacts</a>
-        <a href="/extras">🤫extras</a>
-        <a href="/danger">👾[don't press me]</a>
+        <a href="/contacts">contacts</a>
+        <a href="/extras">extras</a>
+        <a href="/danger">[don't press me]</a>
         <a href="https://www.instagram.com/uvce_mizo/" target="_blank"><img class="insta-footer" src="/images/instagram.png" alt="inst"></a>
     </footer>
 </body>
