--- a/public/css/home.css
+++ b/public/css/home.css
@@ -58,7 +58,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 100%;
     max-width: 600px;
@@ -72,9 +72,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-width: 150px;
-    width: 100%;
-    max-width: 200px;
+    width: 2em;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
