--- a/views/partials/_topbar.ejs
+++ b/views/partials/_topbar.ejs
@@ -5,7 +5,7 @@
     }
 
     .topbar {
-      background-color: #342c20;
+      background-color: #222;
       padding: 14px 20px;
       justify-content: end;
       display: flex;
@@ -22,7 +22,7 @@
     }
 
     .topbar a:hover {
-      background-color: #0a2336c2;
+      background-color: #199afcc2;
       border-radius: 30px;
     }
    .topbar Img {
