--- a/views/form1.ejs
+++ b/views/form1.ejs
@@ -1,7 +1,7 @@
 <style>
 .student-card {
   max-width: 400px;
-  margin: 20px auto;
+  margin: 20px 20px;
   padding: 16px;
   background-color: #f3d3d3;
   border-radius: 12px;
@@ -35,9 +35,14 @@
 </head>
 <body>
  <%- include('partials/_topbar') %>
+        <h1>CSE</h1>
+        <main>
 
+        
    <div class="student-card">
+
   <div class="card-content">
+
     <img src="/image/masstera.jpg" alt="Student Photo" class="student-img">
     <div class="info">
       <h3><strong>Name:</strong> masstera</h3>
@@ -49,5 +54,8 @@
   </div>
 </div>
     </form>
+  </main>
+    <%- include('partials/footer') %>
 </body>
+
 </html>
