--- a/views/question.ejs
+++ b/views/question.ejs
@@ -2,4 +2,5 @@
     <%- include('partials/_topbar') %>
     <p> question</p>
      <img src="/image/masstera.jpg" alt="Anime Image" style="width:50%; height:710px;">
+     <%- include('partials/footer') %>
     </body>
